# Algorithms-and-OS-Lab---5th-Sem

./: Lab1-1.cpp  Lab1-2.cpp  Lab2-1.cpp  Lab2.cpp  Lab2.java  Lab21.java  Lab3-1.cpp  Lab3.cpp  Lab4-1.cpp  Lab4-2.cpp  Lab4-3.cpp  Lab4.cpp  Lab4.java  Lab41.java  Lab42.java
Lab1/: Lab1-1.cpp  Lab1-3.cpp  Lab1.cpp
Lab2/: Lab2.cpp  Lab2.java  Lab21.java
Lab3/: Lab3-1.cpp  Lab3.cpp
Lab4/: Lab4.java  Lab41.java  Lab42.java
Lab6/: CMakeLists.txt  CombinedScheduling.cpp  README.md  RR.cpp  SJF.cpp  SRTF.cpp  SchedulerSimulator.pro  build_and_run.bat  main.cpp  run_simulator.bat  schedulerwindow.cpp  schedulerwindow.cpp.backup  schedulerwindow.h  schedulingcore.cpp  schedulingcore.h
Lab7/: BankerAlgo.cpp  countSafeSequence.cpp  waitForGraph.cpp
